# ruby

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.trainer.yml  docker-compose.yml  pyproject.toml  run.sh  todo.md
.github/workflows/: ci-cd.yml
.zed/: settings.json
config/grafana/: grafana-dashboard.json  orb-trading-dashboard.json  trading-analytics-dashboard.json  training-data-health-dashboard.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/prometheus/: alert_rules.yml  prometheus.yml
dataset/: dataset_stats.json  val.csv
docker/base/: Dockerfile
docker/charting/: Dockerfile  entrypoint.sh  nginx.conf.template
docker/charting/static/: chart.js  index.html  style.css
docker/data/: Dockerfile  entrypoint.sh
docker/engine/: Dockerfile  entrypoint.sh
docker/monitoring/grafana/: Dockerfile
docker/monitoring/prometheus/: Dockerfile
docker/trainer/: Dockerfile
docker/web/: Dockerfile
docs/: STRATEGY_PLAN.md  architecture.md  backlog.md  completed.md  futures_system_printable.html  logging.md  news.md  rithmic_massive_integration.md  rithmic_notes.md  todo_extracted_tasks.md
models/: breakout_cnn_best_meta.json  feature_contract.json
scripts/: analyze.sh  daily_report.py  fix_dataset_paths.py  generate_mermaid.py  generate_mermaid_html.py  monitor_signals.py  ruby_optimizer.py  rubyv4.pine  rubyv5.pine  run_full_retrain.py  run_per_group_training.py  session_signal_audit.py  smoke_test_dataset.py  smoke_test_trainer.py  smoke_test_v8_training.py  sync_models.sh  test_bars_flow.py  test_training_local.py  train_offline.py  validate_dataset.py  verify_training_local.py  wipe_dataset.sh
src/entrypoints/data/: main.py
src/entrypoints/engine/: main.py
src/entrypoints/training/: main.py
src/entrypoints/web/: main.py
src/lib/: __init__.py
src/lib/analysis/: __init__.py  asset_fingerprint.py  breakout_filters.py  confluence.py  cross_asset.py  crypto_momentum.py  cvd.py  ict.py  mtf_analyzer.py  regime.py  scorer.py  signal_quality.py  volatility.py  volume_profile.py  wave_analysis.py
src/lib/analysis/ml/: __init__.py  breakout_cnn.py
src/lib/analysis/rendering/: __init__.py  chart_renderer.py  chart_renderer_parity.py
src/lib/analysis/sentiment/: __init__.py  news_sentiment.py  reddit_sentiment.py
src/lib/core/: __init__.py  alerts.py  asset_registry.py  base.py  breakout_types.py  cache.py  config.py  factory.py  fastapi.py  feature_detection.py  formatters.py  health.py  helpers.py  initialization.py  lifespan.py  logging_config.py  math.py  models.py  multi_session.py  redis_helpers.py  registry.py  runner.py  serialization.py  service.py  teardown.py  text.py  time.py  utils.py
src/lib/core/db/: __init__.py  base.py  orm.py  postgres.py  repository.py
src/lib/core/exceptions/: __init__.py  api.py  app.py  base.py  boundary.py  classes.py  data.py  error_codes.py  general_error.py  loader.py  model.py  prediction.py  reloader.py  trading.py  utils.py  validation.py
src/lib/indicators/: README.md  __init__.py  _shims.py  areas_of_interest.py  base.py  candle_patterns.py  factory.py  helpers.py  indicators.py  manager.py  market_timing.py  patterns.py  presets.py  registry.py
src/lib/indicators/momentum/: rsi.py  stochastic.py
src/lib/indicators/other/: chaikin_money_flow.py  choppiness_index.py  (+8 more)
src/lib/integrations/: __init__.py  grok_helper.py  kraken_client.py  massive_client.py  news_client.py  reddit_watcher.py  rithmic_client.py
src/lib/model/: _shims.py  factory.py  persistence.py  registry.py  service.py
src/lib/services/: __init__.py
src/lib/trading/: __init__.py  engine.py
src/lib/utils/: discover.py  logging_utils.py  permissions.py  setup_logging.py  system.py
src/tests/: conftest.py  test_alerts.py  test_audit.py  test_backfill.py  test_breakout_types.py  test_confluence.py  test_copy_trade_api.py  test_copy_trader.py  test_crypto_momentum.py  test_cvd.py  test_daily_plan.py  test_dashboard_focus_mode.py  test_data_provider_routing.py  test_data_service.py  test_dataset_generator.py  test_dataset_validation.py  test_focus.py  test_gold_price.py  test_grok_compact.py  test_ict.py  test_integration.py  test_kraken_training_pipeline.py  test_massive_client.py  test_metrics_and_ratelimit.py  test_orb.py  test_orb_filters.py  test_patterns.py  test_phase3_ema9_parity.py  test_position_manager.py  test_positions.py  test_risk.py  test_rithmic_account.py  test_ruby_signal_engine.py  test_scheduler.py  test_sse.py  test_strategies_ict.py  test_swing_actions.py  test_swing_detector.py  test_swing_engine_grok.py  test_trainer_endpoints.py  (+2 more)
static/: chat.html  dom.html  journal.html  pine.html  pretrade.html  trading.html
workflows/: ci-cd.yml
(+149 files in other folders)
